PMforce/src/objects/Quote.object
<CustomObject>
    <fields>
        <fullName>Proposal_Amount__c</fullName>
        <label>Proposal Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Proposal_Assignment_Date__c</fullName>
        <defaultValue>TODAY()</defaultValue>
        <description>Date on which the proposal has been assigned to the proposal owner. Will be populated by process builder.</description>
        <label>Proposal Assignment Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Proposal_Completed_On__c</fullName>
        <inlineHelpText>Write the date on which the proposal has been completed for submission.</inlineHelpText>
        <label>Proposal Completed On</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Proposal_Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Assign a owner to the proposal who will work with the sales person and provide necessary support to create a proposal.</inlineHelpText>
        <label>Proposal Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Quotes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Proposal_Submitted_On__c</fullName>
        <inlineHelpText>Date on which the proposal has been submitted to customer.</inlineHelpText>
        <label>Proposal Submitted On</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Target_Completion_Date__c</fullName>
        <inlineHelpText>Date the proposal need to be completed.</inlineHelpText>
        <label>Target Completion Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Target_Submission_Date__c</fullName>
        <label>Target Submission Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <listViews>
        <fullName>mine</fullName>
        <columns>QUOTE.NAME</columns>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>QUOTE.ISSYNCING</columns>
        <columns>QUOTE.EXPIRATIONDATE</columns>
        <columns>QUOTE.SUBTOTAL</columns>
        <columns>QUOTE.TOTALPRICE</columns>
        <filterScope>Mine</filterScope>
        <label>My Quotes</label>
    </listViews>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Proposal_owner_not_blank</fullName>
        <active>true</active>
        <errorConditionFormula>ISBLANK( Proposal_Owner__c )</errorConditionFormula>
        <errorDisplayField>Proposal_Owner__c</errorDisplayField>
        <errorMessage>Please select a proposal owner!</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Submission_Date_Validation</fullName>
        <active>true</active>
        <description>This is a validation rule to restrict user from entering a  submission date less than proposal assignment date.</description>
        <errorConditionFormula>Target_Submission_Date__c  &lt;  Proposal_Assignment_Date__c</errorConditionFormula>
        <errorDisplayField>Target_Submission_Date__c</errorDisplayField>
        <errorMessage>Please enter a date greater than Proposal Assignment Date</errorMessage>
    </validationRules>
</CustomObject>